Fix align issue in mailSection (#8)

--- a/app/home/components/mailSection/mailSection.scss
+++ b/app/home/components/mailSection/mailSection.scss
@@ -8,6 +8,7 @@
 
 .innerContainer {
   max-width: 940px;
+  margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
 }
